--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,13 +8,12 @@ repos:
       - id: check-added-large-files
   - repo: https://github.com/dnephin/pre-commit-golang
     rev: v0.5.0
-    hooks:
-      - id: go-fmt
-      - id: go-imports
-      - id: no-go-testing
-      - id: golangci-lint
-      - id: go-unit-tests
-      # - id: validate-toml
+    hooks: [ ]
+  #      - id: go-fmt
+  #      - id: go-imports
+  #      - id: no-go-testing
+  #      - id: golangci-lint
+  #      - id: go-unit-tests
   - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
     rev: v8.0.0
     hooks:
