--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -8,31 +8,20 @@ services:
     entrypoint: [ "/bin/sh", "-c" ]
     command: [ "./build" ]
     depends_on:
-      - mariadb-one
+      - postgres-one
       - redis-one
   redis-one:
     image: redis:latest
     ports:
       - "${REDIS_ONE_PORT}:6379"
     command: [ "redis-server", "--requirepass", "${REDIS_ONE_PASSWORD}" ]
-  mariadb-one:
-    image: mariadb:latest
+  postgres-one:
+    image: postgres:latest
     ports:
-      - "${MARIADB_ONE_PORT}:3306"
+      - "${POSTGRES_ONE_PORT}:5432"
     volumes:
-      - "../../migration:/docker-entrypoint-initdb.d"
+      - "../../db/postgres_one/migration:/docker-entrypoint-initdb.d"
     environment:
-      MARIADB_USER: ${MARIADB_ONE_USER}
-      MARIADB_PASSWORD: ${MARIADB_ONE_PASSWORD}
-      MARIADB_ROOT_PASSWORD: ${MARIADB_ONE_ROOT_PASSWORD}
-      MARIADB_DATABASE: ${MARIADB_ONE_DATABASE}
-  phpmyadmin-one:
-    image: phpmyadmin/phpmyadmin:latest
-    ports:
-      - "${PHPMYADMIN_ONE_PORT}:80"
-    environment:
-      PMA_HOST: mariadb-one
-      MYSQL_USER: ${PHPMYADMIN_ONE_MYSQL_USER}
-      MYSQL_ROOT_PASSWORD: ${PHPMYADMIN_ONE_MYSQL_ROOT_PASSWORD}
-    depends_on:
-      - mariadb-one
+      POSTGRES_USER: ${POSTGRES_ONE_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_ONE_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_ONE_DATABASE}
