--- a/docker/production/.env
+++ b/docker/production/.env
@@ -7,14 +7,8 @@ REDIS_ONE_HOST=pc-3
 REDIS_ONE_PORT=6379
 REDIS_ONE_PASSWORD=password
 
-MARIADB_ONE_HOST=pc-3
-MARIADB_ONE_PORT=3306
-MARIADB_ONE_USER=user
-MARIADB_ONE_PASSWORD=password
-MARIADB_ONE_ROOT_PASSWORD=password
-MARIADB_ONE_DATABASE=database
-
-PHPMYADMIN_ONE_HOST=pc-3
-PHPMYADMIN_ONE_PORT=80
-PHPMYADMIN_ONE_MYSQL_USER=${MARIADB_ONE_USER}
-PHPMYADMIN_ONE_MYSQL_ROOT_PASSWORD=${MARIADB_ONE_ROOT_PASSWORD}
+POSTGRES_ONE_HOST=pc-3
+POSTGRES_ONE_PORT=5432
+POSTGRES_ONE_USER=user
+POSTGRES_ONE_PASSWORD=password
+POSTGRES_ONE_DATABASE=database
