--- a/.golangci.yml
+++ b/.golangci.yml
@@ -102,7 +102,7 @@ linters-settings:
       - op *Operation
       - tx *gorm.DB
       - db *gorm.DB
-      - db postgres.Client
+      - db cockroachdb.Client
 
 issues:
   fix: true
