--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 ENV=development
 
 APP_HOST=0.0.0.0
-APP_PORT=80
+APP_PORT=1024
 
-REDIS_ONE_HOST=pc-3
+REDIS_ONE_HOST=192.168.1.11
 REDIS_ONE_PORT=6379
 REDIS_ONE_PASSWORD=password
 
-COCKROACHDB_ONE_HOST=pc-3
+COCKROACHDB_ONE_HOST=192.168.1.11
 COCKROACHDB_ONE_HTTP_PORT=8080
 COCKROACHDB_ONE_SQL_PORT=26257
 COCKROACHDB_ONE_NODE_PORT=26357
