--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: ../../
       dockerfile: docker/development/Dockerfile
     ports:
-      - "${APP_PORT}:8080"
+      - "${APP_PORT}:${APP_PORT}"
     entrypoint: [ "/bin/sh", "-c" ]
     command: [ "./build" ]
     depends_on:
