feat: add redis cluster and refactor code.

--- a/docker/staging/.env
+++ b/docker/staging/.env
@@ -1,13 +1,14 @@
 ENV=staging
 
-APP_HOST=0.0.0.0
+APP_HOST=host.docker.internal
 APP_PORT=80
 
-REDIS_ONE_HOST=pc-3
-REDIS_ONE_PORT=6379
+REDIS_ONE_HOST=host.docker.internal
+REDIS_ONE_CLIENT_PORT=6379
+REDIS_ONE_CLUSTER_PORT=16379
 REDIS_ONE_PASSWORD=password
 
-COCKROACHDB_ONE_HOST=pc-3
+COCKROACHDB_ONE_HOST=host.docker.internal
 COCKROACHDB_ONE_HTTP_PORT=8080
 COCKROACHDB_ONE_SQL_PORT=26257
 COCKROACHDB_ONE_NODE_PORT=26357
