--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: ../../
       dockerfile: docker/staging/Dockerfile
     ports:
-      - "${APP_PORT}:8080"
+      - "${APP_PORT}:${APP_PORT}"
     entrypoint: [ "/bin/sh", "-c" ]
     command: [ "./build" ]
     depends_on:
@@ -13,8 +13,27 @@ services:
   redis-one:
     image: redis:latest
     ports:
-      - "${REDIS_ONE_PORT}:6379"
-    command: [ "redis-server", "--requirepass", "${REDIS_ONE_PASSWORD}" ]
+      - "${REDIS_ONE_CLIENT_PORT}:6379"
+      - "${REDIS_ONE_CLUSTER_PORT}:16379"
+    entrypoint: [ "/bin/sh", "-c" ]
+    command:
+      - |
+        redis-server \
+        --requirepass ${REDIS_ONE_PASSWORD} \
+        --cluster-enabled yes \
+        --cluster-config-file nodes.conf \
+        --cluster-node-timeout 5000 \
+  redis-init:
+    image: redis:latest
+    entrypoint: [ "/bin/sh", "-c" ]
+    command:
+      - |
+        redis-cli \
+        --cluster create \
+        ${REDIS_ONE_CLIENT_HOST}:${REDIS_ONE_CLIENT_PORT} \
+        --cluster-replicas 1 \
+    depends_on:
+      - redis-one
   cockroachdb-one:
     image: cockroachdb/cockroach:latest
     ports:
@@ -38,9 +57,9 @@ services:
     entrypoint: [ "/bin/sh", "-c" ]
     command:
       - |
-        cockroach init --host=cockroachdb-one:26357 --insecure \
+        cockroach init --host=${COCKROACHDB_ONE_HOST}:${COCKROACHDB_ONE_NODE_PORT} --insecure \
         && \
-        cockroach sql --host=cockroachdb-one:26257 --insecure \
+        cockroach sql --host=${COCKROACHDB_ONE_HOST}:${COCKROACHDB_ONE_SQL_PORT} --insecure \
         --execute="CREATE ROLE IF NOT EXISTS \"${COCKROACHDB_ONE_USER}\" WITH LOGIN;" \
         --execute="CREATE DATABASE IF NOT EXISTS \"${COCKROACHDB_ONE_DATABASE}\" WITH OWNER \"${COCKROACHDB_ONE_USER}\";" \
         --execute="GRANT ALL ON DATABASE \"${COCKROACHDB_ONE_DATABASE}\" TO \"${COCKROACHDB_ONE_USER}\";" \
@@ -48,7 +67,7 @@ services:
         --execute="ALTER DEFAULT PRIVILEGES GRANT ALL ON TABLES TO \"${COCKROACHDB_ONE_USER}\";" \
         --execute="ALTER DEFAULT PRIVILEGES GRANT ALL ON SEQUENCES TO \"${COCKROACHDB_ONE_USER}\";" \
         && \
-        cockroach sql --host=cockroachdb-one:26257 --insecure \
+        cockroach sql --host=${COCKROACHDB_ONE_HOST}:${COCKROACHDB_ONE_SQL_PORT} --insecure \
         --database=${COCKROACHDB_ONE_DATABASE} \
         --file=/docker-entrypoint-initdb.d/init.sql
     depends_on:
