--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ENV=development
 
-APP_HOST=0.0.0.0
-APP_PORT=1024
+APP_HOST=localhost
+APP_PORT=8080
 
 REDIS_ONE_HOST=192.168.1.11
 REDIS_ONE_PORT=6379
