--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 ENV=development
 
-APP_HOST=localhost
-APP_PORT=8080
+APP_HOST=host.docker.internal
+APP_PORT=80
 
-REDIS_ONE_HOST=192.168.1.11
-REDIS_ONE_PORT=6379
+REDIS_ONE_HOST=host.docker.internal
+REDIS_ONE_CLIENT_PORT=6379
+REDIS_ONE_CLUSTER_PORT=16379
 REDIS_ONE_PASSWORD=password
 
-COCKROACHDB_ONE_HOST=192.168.1.11
+COCKROACHDB_ONE_HOST=host.docker.internal
 COCKROACHDB_ONE_HTTP_PORT=8080
 COCKROACHDB_ONE_SQL_PORT=26257
 COCKROACHDB_ONE_NODE_PORT=26357
