--- a/.env
+++ b/.env
@@ -1,17 +1,30 @@
 ENV=development
 
-APP_HOST=host.docker.internal
-APP_PORT=80
+GATEWAY_HOST=host.docker.internal
 
-REDIS_ONE_HOST=host.docker.internal
-REDIS_ONE_CLIENT_PORT=6379
-REDIS_ONE_CLUSTER_PORT=16379
-REDIS_ONE_PASSWORD=password
+GATEWAY_APP_PORT=80
 
-COCKROACHDB_ONE_HOST=host.docker.internal
-COCKROACHDB_ONE_HTTP_PORT=8080
-COCKROACHDB_ONE_SQL_PORT=26257
-COCKROACHDB_ONE_NODE_PORT=26357
-COCKROACHDB_ONE_USER=user
-COCKROACHDB_ONE_PASSWORD=
-COCKROACHDB_ONE_DATABASE=database
+GATEWAY_REDIS_PORT=6379
+GATEWAY_REDIS_PASSWORD=password
+
+GATEWAY_COCKROACHDB_NODE_PORT=26357
+GATEWAY_COCKROACHDB_SQL_PORT=26257
+GATEWAY_COCKROACHDB_HTTP_PORT=8080
+GATEWAY_COCKROACHDB_USER=user
+GATEWAY_COCKROACHDB_PASSWORD=
+GATEWAY_COCKROACHDB_DATABASE=database
+
+APP_HOST=app
+APP_PORT=${GATEWAY_APP_PORT}
+
+REDIS_ONE_HOST=redis-one
+REDIS_ONE_PORT=${GATEWAY_REDIS_PORT}
+REDIS_ONE_PASSWORD=${GATEWAY_REDIS_PASSWORD}
+
+COCKROACHDB_ONE_HOST=cockroachdb-one
+COCKROACHDB_ONE_HTTP_PORT=${GATEWAY_COCKROACHDB_HTTP_PORT}
+COCKROACHDB_ONE_SQL_PORT=${GATEWAY_COCKROACHDB_SQL_PORT}
+COCKROACHDB_ONE_NODE_PORT=${GATEWAY_COCKROACHDB_NODE_PORT}
+COCKROACHDB_ONE_USER=${GATEWAY_COCKROACHDB_USER}
+COCKROACHDB_ONE_PASSWORD=${GATEWAY_COCKROACHDB_PASSWORD}
+COCKROACHDB_ONE_DATABASE=${GATEWAY_COCKROACHDB_DATABASE}
