--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       - |
         redis-cli \
         --cluster create \
-        ${GATEWAY_REDIS_HOST}:${GATEWAY_REDIS_PORT} \
+        ${REDIS_ONE_HOST}:${GATEWAY_REDIS_PORT} \
     depends_on:
       - nginx-one
   cockroachdb-one:
