--- a/docker/staging/nginx-one/template.nginx.conf
+++ b/docker/staging/nginx-one/template.nginx.conf
@@ -5,6 +5,7 @@ events {
     # if the requests are more than max_connections, the requests will be rejected.
     worker_connections 1024;
 }
+
 stream {
     upstream app {
         server ${APP_HOST}:${APP_PORT};
@@ -12,18 +13,26 @@ stream {
 
     upstream cockroachdb_node {
         server ${COCKROACHDB_ONE_HOST}:${COCKROACHDB_ONE_NODE_PORT};
+        server ${COCKROACHDB_TWO_HOST}:${COCKROACHDB_TWO_NODE_PORT};
+        server ${COCKROACHDB_THREE_HOST}:${COCKROACHDB_THREE_NODE_PORT};
     }
 
     upstream cockroachdb_sql {
         server ${COCKROACHDB_ONE_HOST}:${COCKROACHDB_ONE_SQL_PORT};
+        server ${COCKROACHDB_TWO_HOST}:${COCKROACHDB_TWO_SQL_PORT};
+        server ${COCKROACHDB_THREE_HOST}:${COCKROACHDB_THREE_SQL_PORT};
     }
 
     upstream cockroachdb_http {
         server ${COCKROACHDB_ONE_HOST}:${COCKROACHDB_ONE_HTTP_PORT};
+        server ${COCKROACHDB_TWO_HOST}:${COCKROACHDB_TWO_HTTP_PORT};
+        server ${COCKROACHDB_THREE_HOST}:${COCKROACHDB_THREE_HTTP_PORT};
     }
 
     upstream redis {
         server ${REDIS_ONE_HOST}:${REDIS_ONE_PORT};
+        server ${REDIS_TWO_HOST}:${REDIS_TWO_PORT};
+        server ${REDIS_THREE_HOST}:${REDIS_THREE_PORT};
     }
 
 
