--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -156,7 +156,7 @@ services:
         && \
         cockroach sql --host=${GATEWAY_HOST}:${GATEWAY_COCKROACHDB_SQL_PORT} --insecure \
         --execute="CREATE ROLE IF NOT EXISTS \"${GATEWAY_COCKROACHDB_USER}\" WITH LOGIN;" \
-        --execute="CREATE DATABASE IF NOT EXISTS \"${GATEWAY_COCKROACHDB_DATABASE}\" WITH OWNER \"${GATEWAY_COCKROACHDB_USER}\";" \
+        --execute="CREATE DATABASE IF NOT EXISTS \"${GATEWAY_COCKROACHDB_DATABASE}\";" \
         --execute="GRANT ALL ON DATABASE \"${GATEWAY_COCKROACHDB_DATABASE}\" TO \"${GATEWAY_COCKROACHDB_USER}\";" \
         --execute="\c ${GATEWAY_COCKROACHDB_DATABASE};" \
         --execute="ALTER DEFAULT PRIVILEGES GRANT ALL ON TABLES TO \"${GATEWAY_COCKROACHDB_USER}\";" \
